# AI-Book

./: $null  .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.js  sidebars.ts
.claude-code-router/: config.json
backend/: README.md  alembic.ini  requirements.txt
claude-integration/: prompt-engineering.md  setup-claude.md
docs/: getting-started.md  intro.md  overview.md  prerequisites.md
fundamentals/: ai-native-concepts.md  docusaurus-setup.md  tooling-overview.md  typescript-basics.md
rag-backend/rag-chatbot/: .env.example  .gitignore  Dockerfile  README.md  agent.py  api.py  app.py  data_retrieval.py  debug_agent_output.py  ingest.py  inspect_cohere.py  inspect_qdrant.py  inspect_qdrant_data.py  pyproject.toml  requirements.txt  server.py  space.yaml  test_agent.py  test_api.py  test_endpoint.py  test_server.py  validate_quickstart.py
rag-backend/rag-chatbot/src/api/: main.py  models.py  routes.py
rag-backend/rag-chatbot/src/lib/: config.py  errors.py  logging.py  state_manager.py  utils.py
rag-backend/rag-chatbot/src/models/: base.py  book_content.py  embedding_vector.py  metadata.py  text_chunk.py
rag-backend/rag-chatbot/src/services/: embedding_generator.py  text_chunker.py  text_extractor.py  url_fetcher.py  vector_storage.py
rag-backend/rag-chatbot/tests/integration/: test_end_to_end.py  test_pipeline_integration.py
rag-backend/rag-chatbot/tests/unit/: test_api.py  test_search.py  test_url_fetcher.py
specifyplus-kit/: best-practices.md  components-guide.md  configuration.md  installation.md
(+112 files in other folders)
